--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,13 @@
 
 name: 'CI'
 on:
+  push:
+    branches:
+    - master
   pull_request:
+    branches:
+    - master
+
 jobs:
   build-test:
     runs-on: self-hosted
