--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -33,7 +33,7 @@ jobs:
       run: dotnet build $SOLUTION --configuration $BUILD_CONFIG
 
     - name: Test
-      run: dotnet test $SOLUTION --configuration $BUILD_CONFIG --logger "junit;LogFileName=test-results"|| true
+      run: dotnet test $SOLUTION --configuration $BUILD_CONFIG --logger:"junit;LogFilePath=dotnet-test-result.xml"|| true
 
     - name: Test Report
       uses: dorny/test-reporter@v1
