--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -33,13 +33,13 @@ jobs:
       run: dotnet build $SOLUTION --configuration $BUILD_CONFIG
 
     - name: Test
-      run: dotnet test $SOLUTION --configuration $BUILD_CONFIG --logger "trx;LogFileName==dotnet-test-result.xml"|| true
+      run: dotnet test $SOLUTION --configuration $BUILD_CONFIG --logger "trx;LogFileName=test-results.trx"|| true
 
     - name: Test Report
       uses: dorny/test-reporter@v1
       if: always()
       with:
         name: DotNET Tests
-        path: "**/dotnet-test-result.xml"
-        reporter: jest-junit
+        path: "**/test-result.trx"
+        reporter: dotnet-trx
         fail-on-error: true
