--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -40,6 +40,6 @@ jobs:
       if: always()
       with:
         name: DotNET Tests
-        path: "**/test-result.trx"
+        path: "/Users/eterek111/go/src/github.com/my_forks/OSS/trafficcontrol/actions-runner/_work/trafficcontrol/trafficcontrol/Solution1/UnitTestProject/TestResults/test-results.trx"
         reporter: dotnet-trx
         fail-on-error: true
