--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -42,7 +42,7 @@ jobs:
 
     - name: Test Report
       uses: dorny/test-reporter@v1
-      if: always()
+      if: success() || failure()
       with:
         name: DotNET Tests
         path: "/Users/eterek111/go/src/github.com/my_forks/OSS/trafficcontrol/actions-runner/_work/trafficcontrol/trafficcontrol/Solution1/UnitTestProject/TestResults/test-results.trx"
