--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -47,4 +47,4 @@ jobs:
         name: DotNET Tests
         path: "/Users/eterek111/go/src/github.com/my_forks/OSS/trafficcontrol/actions-runner/_work/trafficcontrol/trafficcontrol/Solution1/UnitTestProject/TestResults/test-results.trx"
         reporter: dotnet-trx
-        fail-on-error: true
+        fail-on-error: false
