--- a/.github/workflows/to.integration.tests.yml
+++ b/.github/workflows/to.integration.tests.yml
@@ -58,7 +58,7 @@ jobs:
 
   APIv3Tests:
     if: github.event.pull_request.draft == false
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     services:
       postgres:
@@ -290,3 +290,12 @@ jobs:
         path: ${{ github.workspace }}/traffic_ops/traffic_ops_golang/traffic.ops.log
     - name: Save Alpine Docker image
       run: .github/actions/save-alpine-tar/entrypoint.sh save ${{ env.ALPINE_VERSION }}
+
+    - name: Test Report
+      uses: dorny/test-reporter@v1
+      if: success() || failure()
+      with:
+        name: TO Tests
+        path: "**/junit/golang.test.toapi.${api_version}.xml"
+        reporter: jest-junit
+        fail-on-error: false
