--- a/.github/workflows/to.unit.tests.yml
+++ b/.github/workflows/to.unit.tests.yml
@@ -73,3 +73,13 @@ jobs:
           flags: traffic_ops_unit,unit_tests
       - name: Save Alpine Docker image
         run: .github/actions/save-alpine-tar/entrypoint.sh save ${{ env.ALPINE_VERSION }}
+
+      - name: Test Report
+        uses: dorny/test-reporter@v1
+        if: success() || failure()
+        with:
+          name: TO Tests
+          path: "**/junit/golang.test.toapi.${api_version}.xml"
+          reporter: jest-junit
+          fail-on-error: false
+
