--- a/.github/workflows/to.api.contract.tests.yml
+++ b/.github/workflows/to.api.contract.tests.yml
@@ -127,6 +127,6 @@ jobs:
       if: success() || failure()
       with:
         name: TO api contract tests
-        path: "./test.xml
+        path: "./test.xml"
         reporter: jest-junit
         fail-on-error: false
