--- a/.github/workflows/to.api.contract.tests.yml
+++ b/.github/workflows/to.api.contract.tests.yml
@@ -53,7 +53,7 @@ jobs:
 
   APIv4ContractTests:
     if: github.event.pull_request.draft == false
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
 
     services:
       postgres:
@@ -128,5 +128,5 @@ jobs:
       with:
         name: TO api contract tests
         path: "**/test.xml"
-        reporter: jest-junit
+        reporter: java-junit
         fail-on-error: false
