--- a/.github/workflows/tr.tests.yaml
+++ b/.github/workflows/tr.tests.yaml
@@ -75,13 +75,13 @@ jobs:
         with:
           name: junit-reports
           path: ${{ github.workspace }}/traffic_router/*/target/*-reports/TEST-*.xml
-#      - name: Checkout junit-report-annotations action
-#        if: ${{ always() }}
-#        uses: actions/checkout@v3
-#        with:
-#          repository: zrhoffman/junit-report-annotations-action
-#          ref: 399056ab38c3da69c5b27f924357e10aec3caf8f # Fri Sep 25 02:02:53 2020 -0600 Make all properties string type (see actions/toolkit#398)
-#          path: .github/actions/junit-report-annotations
+      - name: Checkout junit-report-annotations action
+        if: ${{ always() }}
+        uses: actions/checkout@v3
+        with:
+          repository: zrhoffman/junit-report-annotations-action
+          ref: 399056ab38c3da69c5b27f924357e10aec3caf8f # Fri Sep 25 02:02:53 2020 -0600 Make all properties string type (see actions/toolkit#398)
+          path: .github/actions/junit-report-annotations
       - name: Convert Junit Report to Annotations
         if: ${{ always() }}
         uses: ./.github/actions/junit-report-annotations
